完成了 分类的移动功能

--- a/Static/styles/user.less
+++ b/Static/styles/user.less
@@ -2,6 +2,10 @@
   display: none;
 }
 
+option:disabled {
+    color: #ccc;
+}
+
 .table-sm td, .table-sm th{
 	height: unset;
 	padding: 8px !important;
