调整了一些CSS细节

--- a/Static/bootstrap/css/style-init.css
+++ b/Static/bootstrap/css/style-init.css
@@ -3415,7 +3415,7 @@ button.input-group-addon.fc-agendaWeek-button, .input-group-addon.fc-prev-button
   background: transparent !important;
 }
 .custom-tab-1 .nav-tabs > li.active > a {
-  border-bottom: 3px solid #3cb878;
+  border-bottom: 3px solid #007bff;
 }
 .custom-tab-1.vertical-tab .ver-nav-tab > li {
   background: transparent !important;
