做了一些细节调整

--- a/Static/styles/user.less
+++ b/Static/styles/user.less
@@ -5,7 +5,15 @@
 option:disabled {
     color: #ccc;
 }
-
+.form-inline{
+    .form-group {
+        margin-right: 1rem;
+        label{
+            padding-right:10px;
+            margin-bottom:0px !important;
+        }
+    }
+}
 .table-sm td, .table-sm th{
 	height: unset;
 	padding: 8px !important;
