刚开始做首页模板

--- a/Static/styles/index.css
+++ b/Static/styles/index.css
@@ -1,1 +1,1 @@
-body{background-color:#1572e8!important;touch-action:none}.login{max-width:400px}.login .bi{font-size:1.4rem}.loginContainer{max-width:400px}.login .logo{width:110px}
+.text-black{color:#000}html{font-size:14px;font-family:'PingFang SC','Microsoft YaHei','Helvetica Neue',Helvetica,Arial,sans-serif}
