--- a/Static/styles/index.less
+++ b/Static/styles/index.less
@@ -1,18 +1,8 @@
-body{
-	background-color: #1572e8!important;
-    touch-action: none;
+.text-black{
+    color:#000;
 }
-.login{
-	max-width: 400px;
-	.bi{
-    	font-size: 1.4rem;
-    }
-}
-.loginContainer {
-    max-width: 400px;
-}
-.login .logo {
-    width: 110px;
 
-
+html{
+    font-size: 14px;
+    font-family: 'PingFang SC', 'Microsoft YaHei','Helvetica Neue',Helvetica,Arial,sans-serif;
 }
