--- a/Template/default/detail_article.html
+++ b/Template/default/detail_article.html
@@ -1,21 +1,27 @@
-默认首页模板默认首页模板
-默认首页{{qcms:Scheme}}://{{qcms:domain}}--{{qcms:Email}}模板
-默认首页模板
-{{include  filename='component_header.html'    aa='bb'/}}
-默认首页模板默认首页模板
-默认首页模板
-{{include filename='component_footer.html'}}
-====={{qcms:crumbs}}=====
-默认首页模板默认首页模板默{{label:ltexst}} == {{label:eee}}认首页模板
-{{menu }}<a href="{{qcms:MUrl}}">{{qcms:Mi}}-{{qcms:MName}}-{{qcms:MHasSub}}</a>
-    {{smenu PCateId='{{qcms:MCateId}}'}}<a href="{{qcms:sMUrl}}">{{qcms:sMName}}-{{qcms:sMHasSub}}</a>
-        {{ssmenu PCateId='{{qcms:sMCateId}}'}}<a href="{{qcms:ssMUrl}}">{{qcms:ssMName}}-{{qcms:ssMHasSub}}</a>{{/ssmenu}}
-    {{/smenu}}
-{{/menu}}
-/////////
-{{menu PCateId='1'}}<a href="{{qcms:MUrl}}">{{qcms:MName}}-{{qcms:MHasSub}}</a>{{/menu}}
-bbbbbbbbbbbbbbb
-{{loop sql='select * from qc_user'}}QQQ{{qcms:SUserId}}={{qcms:SNickName}}WWW{{/loop}}
-========================
-{{list module=article CateId='1,2' Row='10'}}<a href="{{qcms:LUrl}}">{{qcms:LTitle}}</a><br>{{/list}}
-==={{qcms:Cate_CateId}}=={{qcms:Detail_Title}}==
+<!doctype html>
+<html lang="zh-CN">
+
+<head>
+    <title>{{qcms:WebName}}</title>
+    <meta charset="utf-8">
+    <meta name="keywords" content="QCMS" />
+    <meta name="description" content="QCMS" />
+
+</head>
+{{include filename='component_meta.html'}}
+<body>
+    {{include filename='component_header.html'}}
+    <div class="mb-4" style="height: 200px;">
+        <div style="height: 600px;background-color: rgba(0, 0, 0, 0); background-repeat: no-repeat; background-image: url(/Static/images/banner1.jpg); background-size: cover; background-position: center center; width: 100%; height: 100%; opacity: 1; visibility: inherit;"></div>
+    </div>
+    <div class="container text-dark bg-white p-4 my-5">
+        <h1>分类名字测试</h1>
+        <div class="pb-2 mb-3 border-bottom text-secondary">来源 <span class="text-black mr-2">新华网</span> 作者 <span class="text-black mr-2">老钱</span> 日期 <span class="text-black mr-2">2022-11-22</span> 浏览数 <span class="text-black mr-2">604</span></div>
+        <p>分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试<br>分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试<br>分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试<br>分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试<br>分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试<br>分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试<br>分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试<br>分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试<br>分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试<br>分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试<br>分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试分类名字测试<br></p>
+    </div>
+
+    {{include filename='component_footer.html'}}
+</body>
+<script src="{{qcms:static}}bootstrap/js/jquery-3.3.1.min.js"></script>
+<script src="{{qcms:static}}bootstrap/js/bootstrap.min.js"></script>
+</html>
