--- a/Static/styles/index.less
+++ b/Static/styles/index.less
@@ -2,7 +2,21 @@
     color:#000;
 }
 
+body{
+    color: #212529 !important;
+     font-family: -apple-system, "SF UI Text", Arial, PingFangSC-Medium, "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "WenQuanYi Micro Hei", sans-serif;;
+}
 html{
     font-size: 14px;
-    font-family: 'PingFang SC', 'Microsoft YaHei','Helvetica Neue',Helvetica,Arial,sans-serif;
+}
+.breadcrumb{
+    float:unset;
+    padding: 0px;
+    a{
+        color: #000;
+    }
+}
+h1{
+    font-size: 1.4rem;
+    font-weight: 600;
 }
