--- a/Template/default/component_footer.html
+++ b/Template/default/component_footer.html
@@ -1,1 +1,7 @@
-我是底部文件1234
+<div class="container-fluid bg-white" style="padding-top: 30px;padding-bottom: 30px; font-size: .9rem;">
+    <div class="container text-center">
+        <div class="mb-2">关于我们  |  联系我们  |  广告服务  |  友情链接  |  版权声明  |  人才招聘  |  帮助  |  发布软件/源码</div>
+        <div class="mb-2 text-secondary">©CopyRight 2002-2022 站长之家 Chinaz.Com, All Rights Reserved。</div>
+        <div class="text-secondary">闽ICP备08105208号</div>
+    </div>
+</div>
