--- a/Template/default/component_header.html
+++ b/Template/default/component_header.html
@@ -1,1 +1,50 @@
-我是头部文件
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container py-3">
+        <a class="navbar-brand" href="#">
+        <svg class="logo mx-3" style="fill: #1572E8!important;width: 98px;height: 24px;" >
+            <use xlink:href="/Static/images/logo.svg#layer"/>
+        </svg>
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">网站首页 <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link " id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false" href="#">公司介绍
+                        <i class="bi bi-chevron-down"></i>
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="#">新闻子页</a>
+                        <a class="dropdown-item" href="#">新闻子页</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="#">新闻子页</a>
+                    </div>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">新闻动态</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">产品中心</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">相册展示</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">资料下载</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">联系我们</a>
+                </li>
+
+            </ul>
+            <form class="form-inline my-2 my-lg-0">
+                <input class="form-control mr-sm-2" type="search" placeholder="请输入搜索关键字" aria-label="Search">
+                <button class="btn btn-primary my-2 my-sm-0" type="submit">搜索</button>
+            </form>
+        </div>
+    </div>
+</nav>
