--- a/Template/default/list_article.html
+++ b/Template/default/list_article.html
@@ -1,21 +1,216 @@
-默认首页模板默认首页模板
-默认首页{{qcms:Scheme}}://{{qcms:domain}}--{{qcms:Email}}模板
-默认首页模板
-{{include  filename='component_header.html'    aa='bb'/}}
-默认首页模板默认首页模板
-默认首页模板
-{{include filename='component_footer.html'}}
-====={{qcms:crumbs}}=====
-默认首页模板默认首页模板默{{label:ltexst}} == {{label:eee}}认首页模板
-{{menu }}<a href="{{qcms:MUrl}}">{{qcms:Mi}}-{{qcms:MName}}-{{qcms:MHasSub}}</a>
-    {{smenu PCateId='{{qcms:MCateId}}'}}<a href="{{qcms:sMUrl}}">{{qcms:sMName}}-{{qcms:sMHasSub}}</a>
-        {{ssmenu PCateId='{{qcms:sMCateId}}'}}<a href="{{qcms:ssMUrl}}">{{qcms:ssMName}}-{{qcms:ssMHasSub}}</a>{{/ssmenu}}
-    {{/smenu}}
-{{/menu}}
-/////////
-{{menu PCateId='1'}}<a href="{{qcms:MUrl}}">{{qcms:MName}}-{{qcms:MHasSub}}</a>{{/menu}}
-bbbbbbbbbbbbbbb
-{{loop sql='select * from qc_user'}}QQQ{{qcms:SUserId}}={{qcms:SNickName}}WWW{{/loop}}
-========================
-{{list module=article CateId='1,2' Row='10'}}<a href="{{qcms:LUrl}}">{{qcms:LTitle}}</a><br>{{/list}}
-==={{qcms:Cate_CateId}}==
+<!doctype html>
+<html lang="zh-CN">
+
+<head>
+    <title>{{qcms:WebName}}</title>
+    <meta charset="utf-8">
+    <meta name="keywords" content="QCMS" />
+    <meta name="description" content="QCMS" />
+
+</head>
+{{include filename='component_meta.html'}}
+<body>
+    {{include filename='component_header.html'}}
+    <div class="mb-4" style="height: 200px;">
+        <div style="height: 600px;background-color: rgba(0, 0, 0, 0); background-repeat: no-repeat; background-image: url(/Static/images/banner1.jpg); background-size: cover; background-position: center center; width: 100%; height: 100%; opacity: 1; visibility: inherit;"></div>
+    </div>
+    <div class="container mb-4 px-2">
+        <div class="row">
+            <div class="col-8" >
+
+                    <div class="h5 text-black py-2 font-weight-bold">新闻动态</div>
+                    <div class="bg-white py-2" >
+                        <div class="p-4 border-bottom">
+                            <a class="d-flex" href="#">
+                            <div class="mr-3"><img class="d-block" src="/Static/images/p1.jpg" style="width:120px;"></div>
+                            <div class="d-flex align-items-start flex-column">
+                                <div class="font-weight-bold mb-1" style="font-size: 1.2rem;">OLED屏新iPad和MacBook Air曝光：京东方供货</div>
+                                <div class="text-secondary">打入iPhone屏幕供应链，意味着京东方的显示品质、良率、产能等已经得到苹果这样苛刻巨头的认可。事实上，按照京东方董事长陈炎顺在2021年报致辞上..</div>
+                                <div class="mt-auto">
+                                    <span class="btn btn-default btn-sm mr-2">iPadPro</span>
+                                    <span class="btn btn-default btn-sm mr-2">MacBookAir</span>
+                                    <span class="btn btn-default btn-sm mr-2">手机</span>
+                                    <span class="btn btn-default btn-sm mr-2">平板电脑</span>
+                                    <span class="text-secondary">15小时前</span>
+                                    </div>
+                            </div>
+                            </a>
+                        </div>
+                        <div class=" p-4 border-bottom">
+                            <a class="d-flex" href="#">
+                            <div class="mr-3"><img class="d-block" src="/Static/images/p1.jpg" style="width:120px;"></div>
+                            <div class="d-flex align-items-start flex-column">
+                                <div class="font-weight-bold mb-1" style="font-size: 1.2rem;">OLED屏新iPad和MacBook Air曝光：京东方供货</div>
+                                <div class="text-secondary">打入iPhone屏幕供应链，意味着京东方的显示品质、良率、产能等已经得到苹果这样苛刻巨头的认可。事实上，按照京东方董事长陈炎顺在2021年报致辞上..</div>
+                                <div class="mt-auto">
+                                    <span class="btn btn-default btn-sm mr-2">iPadPro</span>
+                                    <span class="btn btn-default btn-sm mr-2">MacBookAir</span>
+                                    <span class="btn btn-default btn-sm mr-2">手机</span>
+                                    <span class="btn btn-default btn-sm mr-2">平板电脑</span>
+                                    <span class="text-secondary">15小时前</span>
+                                    </div>
+                            </div>
+                            </a>
+                        </div>
+                        <div class="p-4 border-bottom">
+                            <a class="d-flex" href="#">
+                            <div class="mr-3"><img class="d-block" src="/Static/images/p1.jpg" style="width:120px;"></div>
+                            <div class="d-flex align-items-start flex-column">
+                                <div class="font-weight-bold mb-1" style="font-size: 1.2rem;">OLED屏新iPad和MacBook Air曝光：京东方供货</div>
+                                <div class="text-secondary">打入iPhone屏幕供应链，意味着京东方的显示品质、良率、产能等已经得到苹果这样苛刻巨头的认可。事实上，按照京东方董事长陈炎顺在2021年报致辞上..</div>
+                                <div class="mt-auto">
+                                    <span class="btn btn-default btn-sm mr-2">iPadPro</span>
+                                    <span class="btn btn-default btn-sm mr-2">MacBookAir</span>
+                                    <span class="btn btn-default btn-sm mr-2">手机</span>
+                                    <span class="btn btn-default btn-sm mr-2">平板电脑</span>
+                                    <span class="text-secondary">15小时前</span>
+                                    </div>
+                            </div>
+                            </a>
+                        </div>
+                        <div class="p-4 border-bottom">
+                            <a class="d-flex" href="#">
+                            <div class="mr-3"><img class="d-block" src="/Static/images/p1.jpg" style="width:120px;"></div>
+                            <div class="d-flex align-items-start flex-column">
+                                <div class="font-weight-bold mb-1" style="font-size: 1.2rem;">OLED屏新iPad和MacBook Air曝光：京东方供货</div>
+                                <div class="text-secondary">打入iPhone屏幕供应链，意味着京东方的显示品质、良率、产能等已经得到苹果这样苛刻巨头的认可。事实上，按照京东方董事长陈炎顺在2021年报致辞上..</div>
+                                <div class="mt-auto">
+                                    <span class="btn btn-default btn-sm mr-2">iPadPro</span>
+                                    <span class="btn btn-default btn-sm mr-2">MacBookAir</span>
+                                    <span class="btn btn-default btn-sm mr-2">手机</span>
+                                    <span class="btn btn-default btn-sm mr-2">平板电脑</span>
+                                    <span class="text-secondary">15小时前</span>
+                                    </div>
+                            </div>
+                            </a>
+                        </div>
+                        <ul class="pagination justify-content-center py-3 my-0"><li class="page-item disabled"><a href="/admin/content/index.html?ModelId=1&amp;Page=1" class="page-link">首页</a></li><li class="page-item disabled"><a href="/admin/content/index.html?ModelId=1&amp;Page=1" class="page-link">上一页</a></li><li class="page-item active"><a class="page-link">1</a></li><li class="page-item disabled"><a href="/admin/content/index.html?ModelId=1&amp;Page=1" class="page-link">下一页</a></li><li class="page-item disabled"><a href="/admin/content/index.html?ModelId=1&amp;Page=1" class="page-link">尾页</a></li><li class="page-item  disabled "><a class="page-link">总5条</a></li></ul>
+                    </div>
+
+
+
+            </div>
+            <div class="col-4" >
+                    <div class="h5 text-black py-2 font-weight-bold">热门新闻</div>
+                    <div  class="bg-white p-4 mb-4" >
+                        <li class="mb-2 text-nowrap"><a href="#">OLED屏新iPad和MacBook Air曝光：京东方供货</a></li>
+                        <li class="mb-2 text-nowrap"><a href="#">OLED屏新iPad和MacBook A</a></li>
+                        <li class="mb-2 text-nowrap"><a href="#">OLED屏新iPad和MacBook Air曝光：京东方供货</a></li>
+                        <li class="mb-2 text-nowrap"><a href="#">OLED屏新iPad和MacBook Air曝光：京东方供货</a></li>
+                        <li class="mb-2 text-nowrap"><a href="#">OLED屏新iPad和MacB东方供货</a></li>
+                        <li class="mb-2 text-nowrap"><a href="#">OLED屏新iPad和MacBook Air曝光：京东</a></li>
+                        <li class="mb-2 text-nowrap"><a href="#">OLED屏新iPad和MacBoo京东方供货</a></li>
+                        <li class="mb-2 text-nowrap"><a href="#">OLED屏新iPad和MacBook Air曝光：京东方供货</a></li>
+                        <li class="mb-2 text-nowrap"><a href="#">OLED屏新iPad和MacBook Air曝光</a></li>
+                        <li class="mb-2 text-nowrap"><a href="#">OLED屏新iPad和MacBook Air曝光：京东方供货</a></li>
+                    </div>
+
+                    <div class="h5 text-black py-2 font-weight-bold">下载中心</div>
+                    <div  class="bg-white" >
+                        <div class="px-4 pt-4 pb-1">
+                            <div class="mb-3">
+                            <a class="d-flex align-items-center" href="#">
+                            <div class="mr-3"><img class="d-block" src="/Static/images/p1.jpg" style="width:40px; height: 40px;"></div>
+                            <div>
+                                <div style="font-size:1.1rem;">PHP云人才招聘系统网站源码</div>
+                                <div class="text-secondary">100%开源、自主研发、功能强大</div>
+                            </div>
+                            </a>
+                            </div>
+
+                            <div class="mb-3">
+                            <a class="d-flex align-items-center" href="#">
+                            <div class="mr-3"><img class="d-block" src="/Static/images/p1.jpg" style="width:40px; height: 40px;"></div>
+                            <div>
+                                <div style="font-size:1.1rem;">PHP云人才招聘系统网站源码</div>
+                                <div class="text-secondary">100%开源、自主研发、功能强大</div>
+                            </div>
+                            </a>
+                            </div>
+
+                            <div class="mb-3">
+                            <a class="d-flex align-items-center" href="#">
+                            <div class="mr-3"><img class="d-block" src="/Static/images/p1.jpg" style="width:40px; height: 40px;"></div>
+                            <div>
+                                <div style="font-size:1.1rem;">PHP云人才招聘系统网站源码</div>
+                                <div class="text-secondary">100%开源、自主研发、功能强大</div>
+                            </div>
+                            </a>
+                            </div>
+
+                            <div class="mb-3">
+                            <a class="d-flex align-items-center" href="#">
+                            <div class="mr-3"><img class="d-block" src="/Static/images/p1.jpg" style="width:40px; height: 40px;"></div>
+                            <div>
+                                <div style="font-size:1.1rem;">PHP云人才招聘系统网站源码</div>
+                                <div class="text-secondary">100%开源、自主研发、功能强大</div>
+                            </div>
+                            </a>
+                            </div>
+                            <div class="mb-3">
+                            <a class="d-flex align-items-center" href="#">
+                            <div class="mr-3"><img class="d-block" src="/Static/images/p1.jpg" style="width:40px; height: 40px;"></div>
+                            <div>
+                                <div style="font-size:1.1rem;">PHP云人才招聘系统网站源码</div>
+                                <div class="text-secondary">100%开源、自主研发、功能强大</div>
+                            </div>
+                            </a>
+                            </div>
+                            <div class="mb-3">
+                            <a class="d-flex align-items-center" href="#">
+                            <div class="mr-3"><img class="d-block" src="/Static/images/p1.jpg" style="width:40px; height: 40px;"></div>
+                            <div>
+                                <div style="font-size:1.1rem;">PHP云人才招聘系统网站源码</div>
+                                <div class="text-secondary">100%开源、自主研发、功能强大</div>
+                            </div>
+                            </a>
+                            </div>
+                            <div class="mb-3">
+                            <a class="d-flex align-items-center" href="#">
+                            <div class="mr-3"><img class="d-block" src="/Static/images/p1.jpg" style="width:40px; height: 40px;"></div>
+                            <div>
+                                <div style="font-size:1.1rem;">PHP云人才招聘系统网站源码</div>
+                                <div class="text-secondary">100%开源、自主研发、功能强大</div>
+                            </div>
+                            </a>
+                            </div>
+                            <div class="mb-3">
+                            <a class="d-flex align-items-center" href="#">
+                            <div class="mr-3"><img class="d-block" src="/Static/images/p1.jpg" style="width:40px; height: 40px;"></div>
+                            <div>
+                                <div style="font-size:1.1rem;">PHP云人才招聘系统网站源码</div>
+                                <div class="text-secondary">100%开源、自主研发、功能强大</div>
+                            </div>
+                            </a>
+                            </div>
+                            <div class="mb-3">
+                            <a class="d-flex align-items-center" href="#">
+                            <div class="mr-3"><img class="d-block" src="/Static/images/p1.jpg" style="width:40px; height: 40px;"></div>
+                            <div>
+                                <div style="font-size:1.1rem;">PHP云人才招聘系统网站源码</div>
+                                <div class="text-secondary">100%开源、自主研发、功能强大</div>
+                            </div>
+                            </a>
+                            </div>
+                            <div class="mb-3">
+                            <a class="d-flex align-items-center" href="#">
+                            <div class="mr-3"><img class="d-block" src="/Static/images/p1.jpg" style="width:40px; height: 40px;"></div>
+                            <div>
+                                <div style="font-size:1.1rem;">PHP云人才招聘系统网站源码</div>
+                                <div class="text-secondary">100%开源、自主研发、功能强大</div>
+                            </div>
+                            </a>
+                            </div>
+                        </div>
+
+                    </div>
+
+            </div>
+        </div>
+    </div>
+
+    {{include filename='component_footer.html'}}
+</body>
+<script src="{{qcms:static}}bootstrap/js/jquery-3.3.1.min.js"></script>
+<script src="{{qcms:static}}bootstrap/js/bootstrap.min.js"></script>
+</html>
