模板制作中

--- a/Static/styles/index.less
+++ b/Static/styles/index.less
@@ -4,7 +4,8 @@
 
 body{
     color: #212529 !important;
-     font-family: -apple-system, "SF UI Text", Arial, PingFangSC-Medium, "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "WenQuanYi Micro Hei", sans-serif;;
+    font-family: -apple-system, "SF UI Text", Arial, PingFangSC-Medium, "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "WenQuanYi Micro Hei", sans-serif;;
+    background-color: #fff;
 }
 html{
     font-size: 14px;
