--- a/Template/default/component_header.html
+++ b/Template/default/component_header.html
@@ -1,8 +1,8 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-light shadow">
     <div class="container py-3">
         <a class="navbar-brand" href="#">
         <svg class="logo mx-3" style="fill: #1572E8!important;width: 98px;height: 24px;" >
-            <use xlink:href="/Static/images/logo.svg#layer"/>
+            <use xlink:href="{{qcms:Logo}}#layer"/>
         </svg>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -11,34 +11,24 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">网站首页 <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="/">网站首页<span class="sr-only">(current)</span></a>
                 </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link " id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false" href="#">公司介绍
-                        <i class="bi bi-chevron-down"></i>
-                    </a>
+                {{menu PCateId='0'}}
+                {{if '{{qcms:Menu_HasSub}}' == '1'}}
+                <li class="nav-item dropdown active">
+                    <a class="nav-link" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false" href="{{qcms:Menu_Url}}">{{qcms:Menu_Name}} <i class="bi bi-chevron-down"></i></a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">新闻子页</a>
-                        <a class="dropdown-item" href="#">新闻子页</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">新闻子页</a>
+                        {{smenu PCateId='{{qcms:Menu_CateId}}'}}
+                        <a class="dropdown-item" href="{{qcms:sMenu_Url}}">{{qcms:sMenu_Name}} </a>
+                        {{/smenu}}
                     </div>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">新闻动态</a>
+                {{else}}
+                <li class="nav-item active">
+                    <a class="nav-link" href="{{qcms:Menu_Url}}">{{qcms:Menu_Name}}</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">产品中心</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">相册展示</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">资料下载</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">联系我们</a>
-                </li>
+                {{/if}}
+                {{/menu}}
 
             </ul>
             <form class="form-inline my-2 my-lg-0">
