--- a/Template/default/component_meta.html
+++ b/Template/default/component_meta.html
@@ -2,4 +2,5 @@
 <link href="{{qcms:static}}bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
 <link href="{{qcms:static}}bootstrap/css/morris.css" rel="stylesheet" type="text/css">
 <link href="{{qcms:static}}bootstrap/css/style-init.css" rel="stylesheet" type="text/css">
+<link href="{{qcms:static}}bootstrap/css/swiper.min.css" rel="stylesheet" type="text/css">
 <link href="{{qcms:pathCss}}index.css" rel="stylesheet" type="text/css">
