调整了一些

--- a/Static/styles/index.less
+++ b/Static/styles/index.less
@@ -5,7 +5,7 @@
 body{
     color: #212529 !important;
     font-family: -apple-system, "SF UI Text", Arial, PingFangSC-Medium, "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "WenQuanYi Micro Hei", sans-serif;;
-    background-color: #fff;
+    //background-color: #fff;
 }
 html{
     font-size: 14px;
@@ -20,4 +20,15 @@ html{
 h1{
     font-size: 1.4rem;
     font-weight: 600;
+}
+figure {
+    margin: 0 0 1rem;
+}
+.Content{
+    .image{
+        display: table;
+        clear: both;
+        text-align: center;
+        margin: 1em auto;
+    }
 }
