--- a/Template/default/component_header.html
+++ b/Template/default/component_header.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light shadow">
     <div class="container py-3">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="/">
         <svg class="logo mx-3" style="fill: #1572E8!important;width: 98px;height: 24px;" >
             <use xlink:href="{{qcms:Logo}}#layer"/>
         </svg>
