--- a/Template/default/list_article.html
+++ b/Template/default/list_article.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 
 <head>
-    <title>{{qcms:WebName}}</title>
+    <title>{{qcms:Cate_Name}} —— {{qcms:WebName}}</title>
     <meta charset="utf-8">
     <meta name="keywords" content="QCMS" />
     <meta name="description" content="QCMS" />
@@ -18,24 +18,25 @@
         <div class="row">
             <div class="col-8" >
 
-                    <div class="h5 text-black py-2 font-weight-bold">新闻动态</div>
+                    <div class="h5 text-black py-2 font-weight-bold">{{qcms:Cate_Name}} </div>
                     <div class="bg-white py-2" >
-                        <div class="p-4 border-bottom">
-                            <a class="d-flex" href="#">
-                            <div class="mr-3"><img class="d-block" src="/Static/images/p1.jpg" style="width:120px;"></div>
+                        {{list Module='article' CateId='{{qcms:Cate_CateId}} ' Row='10'}}
+                        <div class="p-4 border-bottom d-flex">
+
+                            <div class="mr-3"><a class="" href="{{qcms:List_Url}}"><img class="d-block" src="{{qcms:List_Pic}}" style="width:120px;"></a></div>
                             <div class="d-flex align-items-start flex-column">
-                                <div class="font-weight-bold mb-1" style="font-size: 1.2rem;">OLED屏新iPad和MacBook Air曝光：京东方供货</div>
-                                <div class="text-secondary">打入iPhone屏幕供应链，意味着京东方的显示品质、良率、产能等已经得到苹果这样苛刻巨头的认可。事实上，按照京东方董事长陈炎顺在2021年报致辞上..</div>
+                                <a class="" href="{{qcms:List_Url}}">
+                                <div class="font-weight-bold mb-1" style="font-size: 1.2rem;">{{qcms:List_Title}}</div>
+                                <div class="text-secondary mb-1">{{qcms:List_Summary}}</div>
+                                </a>
                                 <div class="mt-auto">
-                                    <span class="btn btn-default btn-sm mr-2">iPadPro</span>
-                                    <span class="btn btn-default btn-sm mr-2">MacBookAir</span>
-                                    <span class="btn btn-default btn-sm mr-2">手机</span>
-                                    <span class="btn btn-default btn-sm mr-2">平板电脑</span>
-                                    <span class="text-secondary">15小时前</span>
+                                    {{qcms:List_Tag}}
+                                    <span class="text-secondary">{{Date format='special' time='{{qcms:List_TsUpdate}}'}}</span>
                                     </div>
                             </div>
-                            </a>
+
                         </div>
+                        {{/list}}
                         <div class=" p-4 border-bottom">
                             <a class="d-flex" href="#">
                             <div class="mr-3"><img class="d-block" src="/Static/images/p1.jpg" style="width:120px;"></div>
