产品资料填写完成

--- a/Static/styles/index.less
+++ b/Static/styles/index.less
@@ -3,12 +3,19 @@
 }
 
 body{
+
     color: #212529 !important;
+    line-height: 1.8;
     font-family: -apple-system, "SF UI Text", Arial, PingFangSC-Medium, "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "WenQuanYi Micro Hei", sans-serif;;
     //background-color: #fff;
 }
 html{
     font-size: 14px;
+
+}
+p {
+    font-size: unset;
+    line-height: unset;
 }
 .breadcrumb{
     float:unset;
@@ -32,4 +39,5 @@ figure {
         text-align: center;
         margin: 1em auto;
     }
+    font-size: 1.1rem !important;
 }
