--- a/Template/default/detail_product.html
+++ b/Template/default/detail_product.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 
 <head>
-    <title>{{qcms:WebName}}</title>
+    <title>{{qcms:Detail_Title}} —— {{qcms:WebName}}</title>
     <meta charset="utf-8">
     <meta name="keywords" content="QCMS" />
     <meta name="description" content="QCMS" />
@@ -11,29 +11,32 @@
 {{include filename='component_meta.html'}}
 <body>
     {{include filename='component_header.html'}}
-    <div class="mb-4" style="height: 200px;">
-        <div style="height: 600px;background-color: rgba(0, 0, 0, 0); background-repeat: no-repeat; background-image: url(/Static/images/banner1.jpg); background-size: cover; background-position: center center; width: 100%; height: 100%; opacity: 1; visibility: inherit;"></div>
+    <div class="mb-40" style="height: 380px;">
+        <div style="height: 380px;background-color: rgba(0, 0, 0, 0); background-repeat: no-repeat; background-image: url(/Static/images/banner1.jpg); background-size: cover; background-position: center center; width: 100%; height: 100%; opacity: 1; visibility: inherit;"></div>
     </div>
-    <div class="container text-dark mb-4">
+    <div class="container text-dark mb-40">
         <div class="row">
             <div class="col-9" >
                 <div class="bg-white p-4">
-                    <div class="d-flex border-bottom pb-4 mb-4">
-                        <div class="mr-4">
-                            <img src="/Static/images/p1.jpg" style="width: 380px;height: 380px; max-width: 100%;">
+                    <div class="border-bottom pb-4 mb-4 row">
+                        <div class="col-5">
+                            <img src="{{qcms:Detail_Pic}}" class="d-block" style="width: 380px; max-width: 100%;">
                         </div>
-                        <div class="d-flex align-items-start flex-column text-secondary">
-                            <h1 class="mb-4" style="line-height: unset;">产品名称</h1>
-                            <p>商品名称：<span class="text-dark ">vivoX70 Pro</span></p>
-                            <p>CPU型号：<span class="text-dark ">三星Exynos 1080</span></p>
-                            <p>前摄主摄像素：<span class="text-dark ">3200万像素</span></p>
-                            <p>系统：<span class="text-dark ">Android</span></p>
-                            <p>运行内存：<span class="text-dark ">12GB</span></p>
-                            <p>分辨率：<span class="text-dark">全高清FHD+</span></p>
-                            <p>分辨率：<span class="text-dark">全高清FHD+</span></p>
-                            <p>分辨率：<span class="text-dark">全高清FHD+</span></p>
-                            <p>分辨率：<span class="text-dark">全高清FHD+</span></p>
-                            <button class="btn btn-danger my-3">立即咨询</button>
+                        <div class="col-7 d-flex align-items-start flex-column text-secondary">
+                            <h1 class="" style="line-height: unset;">{{qcms:Detail_Title}}</h1>
+                            <div class="row">
+                            <div class="col-6">厂商：<span class="text-dark ">{{qcms:Detail_factory}}</span></div>
+                            <div class="col-6">级别：<span class="text-dark ">{{qcms:Detail_level}}</span></div>
+                            <div class="col-6">能源类型：<span class="text-dark ">{{qcms:Detail_energy}}</span></div>
+                            <div class="col-6">环保标准：<span class="text-dark ">{{qcms:Detail_environment}}</span></div>
+                            <div class="col-6">上市时间：<span class="text-dark ">{{qcms:Detail_marketTime}}</span></div>
+                            <div class="col-6">最大功率(kW)：<span class="text-dark">{{qcms:Detail_maxpower}}</span></div>
+                            <div class="col-6">最大扭矩(N·m)：<span class="text-dark">{{qcms:Detail_maxtorque}}</span></div>
+                            <div class="col-6">发动机：<span class="text-dark">{{qcms:Detail_engine}}</span></div>
+                            <div class="col-6">变速箱：<span class="text-dark">{{qcms:Detail_transmission}}</span></div>
+                            <div class="col-6">长*宽*高(mm)：<span class="text-dark">{{qcms:Detail_size}}</span></div>
+                            </div>
+                            <button class="btn btn-danger mt-auto">立即咨询</button>
                         </div>
                     </div>
                     <div>
@@ -45,41 +48,13 @@
                 <div class="bg-white">
                     <div class="bg-white px-4 pt-4 pb-2">
                         <div class="font-weight-bold mb-3">热门商品</div>
+                        {{list Model='product' Row='5'}}
                         <div class="mb-3">
-                            <img class="w-100 mb-2 d-block" src="/Static/images/p1.jpg">
-                            <div class="text-black ">Xiaomi真无线降噪耳机3</div>
-                            <p class="text-danger"><span class="mr-2">409 元</span><!----><del class="text-muted"><span class="num">499元</span></del></p>
+                            <img class="w-100 mb-2 d-block" src="{{qcms:List_Pic}}">
+                            <div class="text-black ">{{qcms:List_Title}}</div>
+                            <p class="text-danger"><span class="mr-2">{{qcms:List_Price}} 万元</span><!----><del class="text-muted"><span class="num">{{qcms:List_Price}} 万元</span></del></p>
                         </div>
-                        <div class="mb-3">
-                            <img class="w-100 mb-2 d-block" src="/Static/images/p1.jpg">
-                            <div class="text-black ">Xiaomi真无线降噪耳机3</div>
-                            <p class="text-danger"><span class="mr-2">409 元</span><!----><del class="text-muted"><span class="num">499元</span></del></p>
-                        </div>
-                        <div class="mb-3">
-                            <img class="w-100 mb-2 d-block" src="/Static/images/p1.jpg">
-                            <div class="text-black ">Xiaomi真无线降噪耳机3</div>
-                            <p class="text-danger"><span class="mr-2">409 元</span><!----><del class="text-muted"><span class="num">499元</span></del></p>
-                        </div>
-                        <div class="mb-3">
-                            <img class="w-100 mb-2 d-block" src="/Static/images/p1.jpg">
-                            <div class="text-black ">Xiaomi真无线降噪耳机3</div>
-                            <p class="text-danger"><span class="mr-2">409 元</span><!----><del class="text-muted"><span class="num">499元</span></del></p>
-                        </div>
-                        <div class="mb-3">
-                            <img class="w-100 mb-2 d-block" src="/Static/images/p1.jpg">
-                            <div class="text-black ">Xiaomi真无线降噪耳机3</div>
-                            <p class="text-danger"><span class="mr-2">409 元</span><!----><del class="text-muted"><span class="num">499元</span></del></p>
-                        </div>
-                        <div class="mb-3">
-                            <img class="w-100 mb-2 d-block" src="/Static/images/p1.jpg">
-                            <div class="text-black ">Xiaomi真无线降噪耳机3</div>
-                            <p class="text-danger"><span class="mr-2">409 元</span><!----><del class="text-muted"><span class="num">499元</span></del></p>
-                        </div>
-                        <div class="mb-3">
-                            <img class="w-100 mb-2 d-block" src="/Static/images/p1.jpg">
-                            <div class="text-black ">Xiaomi真无线降噪耳机3</div>
-                            <p class="text-danger"><span class="mr-2">409 元</span><!----><del class="text-muted"><span class="num">499元</span></del></p>
-                        </div>
+                        {{/list}}
                     </div>
                 </div>
             </div>
