--- a/Template/default/list_article.html
+++ b/Template/default/list_article.html
@@ -11,16 +11,16 @@
 {{include filename='component_meta.html'}}
 <body>
     {{include filename='component_header.html'}}
-    <div class="mb-4" style="height: 200px;">
-        <div style="height: 600px;background-color: rgba(0, 0, 0, 0); background-repeat: no-repeat; background-image: url(/Static/images/banner1.jpg); background-size: cover; background-position: center center; width: 100%; height: 100%; opacity: 1; visibility: inherit;"></div>
+    <div class="mb-40" style="height: 380px;">
+        <div style="height: 380px;background-color: rgba(0, 0, 0, 0); background-repeat: no-repeat; background-image: url(/Static/images/banner1.jpg); background-size: cover; background-position: center center; width: 100%; height: 100%; opacity: 1; visibility: inherit;"></div>
     </div>
-    <div class="container mb-4 px-2">
+    <div class="container mb-40 px-2">
         <div class="row">
             <div class="col-8" >
 
                     <div class="h5 text-black py-2 font-weight-bold">{{qcms:Cate_Name}} </div>
                     <div class="bg-white py-2" >
-                        {{list Module='article' CateId='{{qcms:Cate_CateId}}' Row='10' IsPage='1'}}
+                        {{list Model='article' CateId='{{qcms:Cate_CateId}}' Row='10' IsPage='1'}}
                         <div class="p-4 border-bottom d-flex">
 
                             <div class="mr-3"><a class="" href="{{qcms:List_Url}}"><img class="d-block border" src="{{qcms:List_Pic}}" style="width:120px;"></a></div>
@@ -37,8 +37,6 @@
 
                         </div>
                         {{/list}}
-
-                        {{replace Search='刘德华' Replace='张学友' Str='我是刘德华'}}
                         {{qcms:List_PageBar}}
                     </div>
 
