--- a/Template/default/list_product.html
+++ b/Template/default/list_product.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 
 <head>
-    <title>{{qcms:WebName}}</title>
+    <title>{{qcms:Cate_Name}} —— {{qcms:WebName}}</title>
     <meta charset="utf-8">
     <meta name="keywords" content="QCMS" />
     <meta name="description" content="QCMS" />
@@ -11,82 +11,30 @@
 {{include filename='component_meta.html'}}
 <body>
     {{include filename='component_header.html'}}
-    <div class="mb-4" style="height: 200px;">
-        <div style="height: 600px;background-color: rgba(0, 0, 0, 0); background-repeat: no-repeat; background-image: url(/Static/images/banner1.jpg); background-size: cover; background-position: center center; width: 100%; height: 100%; opacity: 1; visibility: inherit;"></div>
+    <div class="mb-40" style="height: 380px;">
+        <div style="height: 380px;background-color: rgba(0, 0, 0, 0); background-repeat: no-repeat; background-image: url(/Static/images/banner1.jpg); background-size: cover; background-position: center center; width: 100%; height: 100%; opacity: 1; visibility: inherit;"></div>
     </div>
 
     <div class=" text-center mb-3">
-        <div class=" h3 text-black font-weight-bold">产品中心</div>
-        <p class="text-secondary" >无线降噪无线降噪无线降噪无线降噪无线降噪</p>
+        <div class=" h3 text-black font-weight-bold">{{qcms:Cate_Name}}</div>
+        <p class="text-secondary" >{{qcms:Cate_SeoTitle}}</p>
     </div >
-    <div class="container mb-4">
+    <div class="container mb-40">
         <div class="row text-center">
+            {{list Model='product' CateId='{{qcms:Cate_CateId}}' Row='12' IsPage='1'}}
             <div class="col-3 py-2 px-2 ">
-                <div class="bg-white p-4">
-                <img class="w-100 my-4 d-block" src="/Static/images/p1.jpg">
-                <div class="text-black mb-1">Xiaomi真无线降噪耳机3</div>
-                <div class="mb-2 text-secondary">静听好声音</div>
-                <p class="text-danger"><span class="mr-2">409 元</span><!----><del class="text-muted"><span class="num">499元</span></del></p>
+                <a href="{{qcms:List_Url}}">
+                <div class="bg-white p-2">
+                <img class="w-100 d-block mb-3" src="{{qcms:List_Pic}}">
+                <div class="text-black font-weight-bold">{{qcms:List_Title}}</div>
+                <div class="mb-1 text-secondary">{{qcms:List_STitle}}</div>
+                <p class="text-danger"><span class="mr-2">{{qcms:List_Price}} 万元</span><!----><del class="text-muted"><span class="num">{{qcms:List_Price}} 万元</span></del></p>
                 </div>
+                </a>
             </div>
-            <div class="col-3 py-2 px-2">
-                <div class="bg-white p-4">
-                <img class="w-100 my-4 d-block" src="/Static/images/p1.jpg">
-                <div class="text-black mb-1">Xiaomi真无线降噪耳机3</div>
-                <div class="mb-2 text-secondary">静听好声音</div>
-                <p class="text-danger"><span class="mr-2">409 元</span><!----><del class="text-muted"><span class="num">499元</span></del></p>
-                </div>
-            </div>
-            <div class="col-3 py-2 px-2">
-                <div class="bg-white p-4">
-                <img class="w-100 my-4 d-block" src="/Static/images/p1.jpg">
-                <div class="text-black mb-1">Xiaomi真无线降噪耳机3</div>
-                <div class="mb-2 text-secondary">静听好声音</div>
-                <p class="text-danger"><span class="mr-2">409 元</span><!----><del class="text-muted"><span class="num">499元</span></del></p>
-                </div>
-            </div>
-            <div class="col-3 py-2 px-2">
-                <div class="bg-white p-4">
-                <img class="w-100 my-4 d-block" src="/Static/images/p1.jpg">
-                <div class="text-black mb-1">Xiaomi真无线降噪耳机3</div>
-                <div class="mb-2 text-secondary">静听好声音</div>
-                <p class="text-danger"><span class="mr-2">409 元</span><!----><del class="text-muted"><span class="num">499元</span></del></p>
-                </div>
-            </div>
-            <div class="col-3 py-2 px-2">
-                <div class="bg-white p-4">
-                <img class="w-100 my-4 d-block" src="/Static/images/p1.jpg">
-                <div class="text-black mb-1">Xiaomi真无线降噪耳机3</div>
-                <div class="mb-2 text-secondary">静听好声音</div>
-                <p class="text-danger"><span class="mr-2">409 元</span><!----><del class="text-muted"><span class="num">499元</span></del></p>
-                </div>
-            </div>
-            <div class="col-3 py-2 px-2">
-                <div class="bg-white p-4">
-                <img class="w-100 my-4 d-block" src="/Static/images/p1.jpg">
-                <div class="text-black mb-1">Xiaomi真无线降噪耳机3</div>
-                <div class="mb-2 text-secondary">静听好声音</div>
-                <p class="text-danger"><span class="mr-2">409 元</span><!----><del class="text-muted"><span class="num">499元</span></del></p>
-                </div>
-            </div>
-            <div class="col-3 py-2 px-2">
-                <div class="bg-white p-4">
-                <img class="w-100 my-4 d-block" src="/Static/images/p1.jpg">
-                <div class="text-black mb-1">Xiaomi真无线降噪耳机3</div>
-                <div class="mb-2 text-secondary">静听好声音</div>
-                <p class="text-danger"><span class="mr-2">409 元</span><!----><del class="text-muted"><span class="num">499元</span></del></p>
-                </div>
-            </div>
-            <div class="col-3 py-2 px-2">
-                <div class="bg-white p-4">
-                <img class="w-100 my-4 d-block" src="/Static/images/p1.jpg">
-                <div class="text-black mb-1">Xiaomi真无线降噪耳机3</div>
-                <div class="mb-2 text-secondary">静听好声音</div>
-                <p class="text-danger"><span class="mr-2">409 元</span><!----><del class="text-muted"><span class="num">499元</span></del></p>
-                </div>
-            </div>
+            {{/list}}
         </div>
-        <ul class="pagination justify-content-center py-3 my-0"><li class="page-item disabled"><a href="/admin/content/index.html?ModelId=1&amp;Page=1" class="page-link">首页</a></li><li class="page-item disabled"><a href="/admin/content/index.html?ModelId=1&amp;Page=1" class="page-link">上一页</a></li><li class="page-item active"><a class="page-link">1</a></li><li class="page-item disabled"><a href="/admin/content/index.html?ModelId=1&amp;Page=1" class="page-link">下一页</a></li><li class="page-item disabled"><a href="/admin/content/index.html?ModelId=1&amp;Page=1" class="page-link">尾页</a></li><li class="page-item  disabled "><a class="page-link">总5条</a></li></ul>
+        {{qcms:List_PageBar}}
     </div>
 
     {{include filename='component_footer.html'}}
